pkgs/ffigen/example/shared_bindings/lib/generated/a_gen.dart

// ignore_for_file: non_constant_identifier_names, camel_case_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to `headers/a.h`.
class NativeLibraryA {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibraryA(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibraryA.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void base_func1(
    BaseTypedef1 t1,
    BaseTypedef2 t2,
  ) {
    return _base_func1(
      t1,
      t2,
    );
  }

  late final _base_func1Ptr = _lookup<
          ffi.NativeFunction<ffi.Void Function(BaseTypedef1, BaseTypedef2)>>(
      'base_func1');
  late final _base_func1 =
      _base_func1Ptr.asFunction<void Function(BaseTypedef1, BaseTypedef2)>();

  void a_func1() {
    return _a_func1();
  }

  late final _a_func1Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('a_func1');
  late final _a_func1 = _a_func1Ptr.asFunction<void Function()>();

  void a_func2(
    BaseStruct2 s,
    BaseUnion2 u,
    BaseTypedef2 t,
  ) {
    return _a_func2(
      s,
      u,
      t,
    );
  }

  late final _a_func2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(BaseStruct2, BaseUnion2, BaseTypedef2)>>('a_func2');
  late final _a_func2 = _a_func2Ptr
      .asFunction<void Function(BaseStruct2, BaseUnion2, BaseTypedef2)>();

  void a_func3(
    int i,
  ) {
    return _a_func3(
      i,
    );
  }

  late final _a_func3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(BaseNativeTypedef1)>>(
          'a_func3');
  late final _a_func3 = _a_func3Ptr.asFunction<void Function(int)>();

  void a_func4(
    int i,
  ) {
    return _a_func4(
      i,
    );
  }

  late final _a_func4Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(BaseNativeTypedef2)>>(
          'a_func4');
  late final _a_func4 = _a_func4Ptr.asFunction<void Function(int)>();

  void a_func5(
    int i,
  ) {
    return _a_func5(
      i,
    );
  }

  late final _a_func5Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(BaseNativeTypedef3)>>(
          'a_func5');
  late final _a_func5 = _a_func5Ptr.asFunction<void Function(int)>();
}

final class BaseStruct1 extends ffi.Struct {
  @ffi.Int()
  external int a;
}

final class BaseUnion1 extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class BaseStruct2 extends ffi.Struct {
  @ffi.Int()
  external int a;
}

final class BaseUnion2 extends ffi.Union {
  @ffi.Int()
  external int a;
}

typedef BaseTypedef1 = BaseStruct1;
typedef BaseTypedef2 = BaseStruct2;
typedef BaseNativeTypedef1 = ffi.Int;
typedef DartBaseNativeTypedef1 = int;
typedef BaseNativeTypedef2 = BaseNativeTypedef1;
typedef BaseNativeTypedef3 = BaseNativeTypedef2;

enum BaseEnum {
  BASE_ENUM_1(0),
  BASE_ENUM_2(1);

  final int value;
  const BaseEnum(this.value);

  static BaseEnum fromValue(int value) => switch (value) {
        0 => BASE_ENUM_1,
        1 => BASE_ENUM_2,
        _ => throw ArgumentError("Unknown value for BaseEnum: $value"),
      };
}

final class A_Struct1 extends ffi.Struct {
  @ffi.Int()
  external int a;
}

final class A_Union1 extends ffi.Union {
  @ffi.Int()
  external int a;
}

enum A_Enum {
  A_ENUM_1(0),
  A_ENUM_2(1);

  final int value;
  const A_Enum(this.value);

  static A_Enum fromValue(int value) => switch (value) {
        0 => A_ENUM_1,
        1 => A_ENUM_2,
        _ => throw ArgumentError("Unknown value for A_Enum: $value"),
      };
}

const int BASE_MACRO_1 = 1;

const int A_MACRO_1 = 1;
